--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
           <img width="100%" height="60%" src="images/slimchicken.jpg" alt="">
           <p> </p>
            <p>My top restaurant choices in</p>
-        <p>and around West London</p>
+        <p>and around West London.</p>
         
           <a href="https://www.google.com/maps/search/restaurants+in+west+London/@51.4939101,-0.2517139,12z/data=!3m1!4b1"><button class="btn btn-lg btn-block btn-dark" type="button">View Resturants</button></a>
                   </div>
@@ -190,7 +190,7 @@
         <img width="100%" height="60%" src="images/theivyasian.jpg" alt="">
         <p> </p>
         <p>My top restaurant choices in</p>
-        <p>and around East London</p>
+        <p>and around East London.</p>
         
         <a href="https://www.google.com/maps/search/restaurants+in+East+london/@51.4942542,-0.2517142,12z/data=!3m1!4b1"><button class="btn btn-lg btn-block btn-dark" type="button">View Resturants</button></a>
       </div>
@@ -207,7 +207,7 @@
           <img width="100%" height="60%" src="images/gokyuzu.jpg" alt="">
           <p></p>
            <p>My top restaurant choices in</p>
-        <p>and around North London</p>
+        <p>and around North London.</p>
           <a href="https://www.google.com/maps/search/restaurants+in+north+London/@51.4942542,-0.2517142,12z/data=!3m1!4b1"><button class="btn btn-lg btn-block btn-dark" type="button">View Resturants</button></a>
       </div>
     </div>
